Added Configuration class and Configuration screen to select between NMEA2000 and Octopuce USB tach module signals for engine RPM and to enter offsets for water depth/water temperature measurements coming from the DST800 depth sounder.

--- a/WhatTheHelmRuntime/Gauges.resx
+++ b/WhatTheHelmRuntime/Gauges.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="gaugePortRpm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="controlInnerBevel1.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
@@ -153,6 +156,9 @@
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAABAAAACAEAAAAL
 </value>
   </data>
+  <metadata name="gaugeStbdRpm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>151, 17</value>
+  </metadata>
   <data name="controlInnerBevel2.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
@@ -189,6 +195,9 @@
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAABAAAACAEAAAAL
 </value>
   </data>
+  <metadata name="gaugeSog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>287, 17</value>
+  </metadata>
   <data name="controlInnerBevel3.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
@@ -225,6 +234,9 @@
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAABAAAACAEAAAAL
 </value>
   </data>
+  <metadata name="gaugeRudderAngle.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>394, 17</value>
+  </metadata>
   <data name="controlInnerBevel4.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
