--- a/WhatTheHelmRuntime/Rudder.resx
+++ b/WhatTheHelmRuntime/Rudder.resx
@@ -117,4 +117,42 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="linearGauge1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="controlInnerBevel2.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
+        bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
+        aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAACAAAACAIAAAACAAAACw==
+</value>
+  </data>
+  <data name="rectControlBorder2.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
+        bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
+        aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAACAAAACAIAAAACAAAACw==
+</value>
+  </data>
+  <data name="controlFont4.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
+        bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
+        aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAABAAAACAEAAAAL
+</value>
+  </data>
+  <data name="controlFont5.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
+        bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
+        aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAABAAAACAEAAAAL
+</value>
+  </data>
+  <data name="controlFont6.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
+        bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
+        aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAABAAAACAEAAAAL
+</value>
+  </data>
 </root>
