--- a/WhatTheHelmRuntime/TrimControl.resx
+++ b/WhatTheHelmRuntime/TrimControl.resx
@@ -117,21 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="controlInnerBevel3.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <metadata name="gaugeStbdTrim.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="controlInnerBevel1.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAACAAAACAIAAAACAAAACw==
 </value>
   </data>
-  <data name="rectControlBorder3.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="rectControlBorder1.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAACAAAACAIAAAACAAAACw==
 </value>
   </data>
-  <data name="controlFont7.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="controlFont1.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
@@ -146,35 +149,38 @@
         aWNpdEhlaWdodAP6AAs=
 </value>
   </data>
-  <data name="controlFont8.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="controlFont2.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAABAAAACAEAAAAL
 </value>
   </data>
-  <data name="controlFont9.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="controlFont3.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAABAAAACAEAAAAL
 </value>
   </data>
-  <data name="controlInnerBevel4.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <metadata name="gaugePortTrim.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>153, 17</value>
+  </metadata>
+  <data name="controlInnerBevel2.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAACAAAACAIAAAACAAAACw==
 </value>
   </data>
-  <data name="rectControlBorder4.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="rectControlBorder2.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAACAAAACAIAAAACAAAACw==
 </value>
   </data>
-  <data name="controlFont10.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="controlFont4.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
@@ -189,14 +195,14 @@
         aWNpdEhlaWdodAP6AAs=
 </value>
   </data>
-  <data name="controlFont11.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="controlFont5.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
         aW5hcnlEYXRhAQAAAAVFbnVtcwcIAgAAAAkDAAAADwMAAAABAAAACAEAAAAL
 </value>
   </data>
-  <data name="controlFont12.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="controlFont6.InternalData" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFNNaXRvdi5CYXNpY0xhYiwgVmVyc2lvbj03LjguMi4yNzEsIEN1
         bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49NTRiOGExZjM4Yzk0MjIxYQUBAAAAEVZjbC5WY2xC
